--- a/package.json
+++ b/package.json
@@ -19,5 +19,11 @@
   "homepage": "https://github.com/hanmailco34/startup#readme",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "css-loader": "^6.2.0",
+    "style-loader": "^3.2.1",
+    "webpack": "^5.48.0",
+    "webpack-cli": "^4.7.2"
   }
 }
