--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
   "homepage": "https://github.com/hanmailco34/startup#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.6.5"
+    "sequelize": "^6.6.5",
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.5"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
