--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   },
   "homepage": "https://github.com/hanmailco34/startup#readme",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
+    "request-ip": "^2.1.3",
     "sequelize": "^6.6.5",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5"
