--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "morgan": "^1.10.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
+    "request": "^2.88.2",
     "request-ip": "^2.1.3",
     "sequelize": "^6.6.5",
     "winston": "^3.3.3",
