jwt 로그인 완료

--- a/public/js/manifest.json
+++ b/public/js/manifest.json
@@ -1,13 +1,14 @@
 {
-  "common": "/js/common.b470a846fc264bd5be35.js",
-  "index": "/js/index.e56bce5b8c101cb54694.js",
-  "join": "/js/join.5eb76f54df3d8d4e93e0.js",
-  "login": "/js/login.4d8cf41f4763d79c8831.js",
-  "rpc": "/js/rpc.7d68eb3e8fa6674eeb10.js",
+  "common": "/js/common.1e0d3ccd067fc7df723e.js",
+  "home": "/js/home.3572717651f71968b4c6.js",
+  "index": "/js/index.70b42ccc6b411f8a16e8.js",
+  "join": "/js/join.f0583997598d68eb5100.js",
+  "login": "/js/login.cfba01ddc8f59eb3a973.js",
+  "rpc": "/js/rpc.1bb2bed3525fef0de9cd.js",
   "jquery_v360": "/js/9aac3fd615c6b825afff.js",
   "loading": "/js/79c31ef68f03247cc60f.gif",
   "btnG_완성형": "/js/4382736d0fcc19a758c7.png",
   "favicon": "/js/f2b51090dc5572827bb9.ico",
-  "": "/js/../html/join.html",
+  "": "/js/../html/home.html",
   "manifest": "/js/9b47ad0f9c672f26ea5e.js"
 }
