Revert "이제 npm run build안하고 node run.js실행만하면 프론트 바뀜"
This reverts commit 15af048bb1aa069b117281dd538b23dc00e99cf1.

--- a/public/js/manifest.json
+++ b/public/js/manifest.json
@@ -1,14 +1,14 @@
 {
-  "common": "/js/common.6a0264cb0f115a5e9324.js",
-  "home": "/js/home.538e9b81d96c7e3b838e.js",
-  "index": "/js/index.b1175174c0c26026bb66.js",
-  "join": "/js/join.c258b19c6f39bc702408.js",
-  "login": "/js/login.7c9d056875b5fd56608f.js",
+  "common": "/js/common.1e0d3ccd067fc7df723e.js",
+  "home": "/js/home.3572717651f71968b4c6.js",
+  "index": "/js/index.70b42ccc6b411f8a16e8.js",
+  "join": "/js/join.f0583997598d68eb5100.js",
+  "login": "/js/login.cfba01ddc8f59eb3a973.js",
   "rpc": "/js/rpc.1bb2bed3525fef0de9cd.js",
   "jquery_v360": "/js/9aac3fd615c6b825afff.js",
   "loading": "/js/79c31ef68f03247cc60f.gif",
   "btnG_완성형": "/js/4382736d0fcc19a758c7.png",
   "favicon": "/js/f2b51090dc5572827bb9.ico",
-  "manifest": "/js/2c09ab0a9eda9721fba6.js",
-  "": "/js/../html/home.html"
+  "": "/js/../html/home.html",
+  "manifest": "/js/9b47ad0f9c672f26ea5e.js"
 }
