--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/hanmailco34/startup#readme",
   "dependencies": {
+    "axios": "^0.24.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -28,7 +29,6 @@
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "qs": "^6.10.2",
-    "request": "^2.88.2",
     "request-ip": "^2.1.3",
     "sequelize": "^6.6.5",
     "winston": "^3.3.3",
