--- a/public/js/manifest.json
+++ b/public/js/manifest.json
@@ -1,53 +1,23 @@
 {
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
->>>>>>> 8126cab (Merge branch 'master' of github.com:hanmailco34/startup)
-  "common": "/js/common.1e0d3ccd067fc7df723e.js",
-  "home": "/js/home.3572717651f71968b4c6.js",
-  "index": "/js/index.70b42ccc6b411f8a16e8.js",
-  "join": "/js/join.f0583997598d68eb5100.js",
-<<<<<<< HEAD
-  "login": "/js/login.4ae85d174e37fd032c43.js",
-=======
-=======
->>>>>>> 15af048 (이제 npm run build안하고 node run.js실행만하면 프론트 바뀜)
-  "common": "/js/common.6a0264cb0f115a5e9324.js",
-  "home": "/js/home.538e9b81d96c7e3b838e.js",
-  "index": "/js/index.b1175174c0c26026bb66.js",
-  "join": "/js/join.c258b19c6f39bc702408.js",
-  "login": "/js/login.7c9d056875b5fd56608f.js",
-<<<<<<< HEAD
->>>>>>> 15af048 (이제 npm run build안하고 node run.js실행만하면 프론트 바뀜)
-=======
-  "login": "/js/login.cfba01ddc8f59eb3a973.js",
->>>>>>> 8126cab (Merge branch 'master' of github.com:hanmailco34/startup)
-=======
->>>>>>> 15af048 (이제 npm run build안하고 node run.js실행만하면 프론트 바뀜)
+  "common": "/js/common.b40d42567faaab8e2ee7.js",
+  "components": "/js/components.129ea0d752b8c67f2c49.js",
+  "disappearance": "/js/disappearance.2a6bb7915769144a993a.js",
+  "global": "/js/global.bf5aab19528025f3946e.js",
+  "header": "/js/header.df10b03161005c739797.js",
+  "home": "/js/home.ea97cc56209ecd36f1d4.js",
+  "index": "/js/index.187cb64ce621ff9105cf.js",
+  "join": "/js/join.5dec9668f42e5d1232cc.js",
+  "login": "/js/login.af741b991962c8d52977.js",
+  "missing": "/js/missing.330d321bfc49521b399f.js",
   "rpc": "/js/rpc.1bb2bed3525fef0de9cd.js",
   "jquery_v360": "/js/9aac3fd615c6b825afff.js",
   "loading": "/js/79c31ef68f03247cc60f.gif",
+  "flasher": "/js/3fcb3289971ef190d26c.png",
   "favicon": "/js/f2b51090dc5572827bb9.ico",
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
+  "": "/js/../html/join.html",
   "kakao_icon": "/js/94934c087b90964393cc.png",
   "facebook_icon": "/js/341803a18592f4d966a6.png",
   "naver_icon": "/js/b3637397af0bf1febfdf.png",
-  "google_icon": "/js/f134f0ef84a40ab4ae0d.png",
-  "": "/js/../html/home.html",
-  "manifest": "/js/9b47ad0f9c672f26ea5e.js"
-=======
-  "manifest": "/js/2c09ab0a9eda9721fba6.js",
-  "": "/js/../html/home.html"
->>>>>>> 15af048 (이제 npm run build안하고 node run.js실행만하면 프론트 바뀜)
-=======
-  "": "/js/../html/home.html",
-  "manifest": "/js/9b47ad0f9c672f26ea5e.js"
->>>>>>> 8126cab (Merge branch 'master' of github.com:hanmailco34/startup)
-=======
-  "manifest": "/js/2c09ab0a9eda9721fba6.js",
-  "": "/js/../html/home.html"
->>>>>>> 15af048 (이제 npm run build안하고 node run.js실행만하면 프론트 바뀜)
+  "manifest": "/js/5e3b0ebf0b7f2a62d46c.js",
+  "google_icon": "/js/f134f0ef84a40ab4ae0d.png"
 }
