--- a/public/js/manifest.json
+++ b/public/js/manifest.json
@@ -1,23 +1,30 @@
 {
-  "common": "/js/common.20499bed3b2f8b2ba1ca.js",
-  "components": "/js/components.d6d36a8231b7d82fc143.js",
-  "disappearance": "/js/disappearance.f3fc6a1a41865cdedba8.js",
-  "global": "/js/global.bf5aab19528025f3946e.js",
-  "header": "/js/header.daafa5381ae9ed615ac2.js",
-  "home": "/js/home.2ddf9df588dea48f4864.js",
-  "index": "/js/index.49ffa625072d084ce579.js",
-  "join": "/js/join.5c33ec798faa1adfd8a9.js",
-  "login": "/js/login.f33df7b2b93db88a1ff4.js",
-  "missing": "/js/missing.3e735c1f9ea1a88d829b.js",
+  "common": "/js/common.78ecf31ee67c618c4360.js",
+  "components": "/js/components.d735979a86536eb39722.js",
+  "disappearance": "/js/disappearance.c8f9b8531779fc37e5fe.js",
+  "food": "/js/food.936b24060a8e8753e897.js",
+  "foodUpload": "/js/foodUpload.96d1ed6846ceb1f3ea30.js",
+  "global": "/js/global.7a0bc6d12937fc13a752.js",
+  "header": "/js/header.5257e40dc0de11b27f24.js",
+  "home": "/js/home.7db0d2fb8bc5e52900bc.js",
+  "index": "/js/index.516e3551b4be005cb9d5.js",
+  "join": "/js/join.5f59e2998c03ddc361e4.js",
+  "login": "/js/login.54cf081fafa2c0043622.js",
+  "missing": "/js/missing.2d575ee2cb0ae5a99483.js",
   "rpc": "/js/rpc.1bb2bed3525fef0de9cd.js",
+  "sort": "/js/a934521db7f3b1478bd5.js",
   "jquery_v360": "/js/9aac3fd615c6b825afff.js",
   "loading": "/js/79c31ef68f03247cc60f.gif",
+  "search": "/js/534d1646c5990a81b679.png",
   "flasher": "/js/3fcb3289971ef190d26c.png",
+  "upload": "/js/68712ba661f03b93977d.png",
   "favicon": "/js/f2b51090dc5572827bb9.ico",
+  "upload2": "/js/042e1de42f09dde0258e.png",
   "": "/js/../html/join.html",
   "kakao_icon": "/js/94934c087b90964393cc.png",
   "facebook_icon": "/js/341803a18592f4d966a6.png",
   "naver_icon": "/js/b3637397af0bf1febfdf.png",
+  "touch": "/js/fa9f7049cef08424e18f.js",
   "manifest": "/js/5e3b0ebf0b7f2a62d46c.js",
   "google_icon": "/js/f134f0ef84a40ab4ae0d.png"
 }
