--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jest": "^27.4.5",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "node-mocks-http": "^1.11.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
